# Autonomous-LLM-Powered-Data-Analysis-Visualization-Engine

./: .env.example  .gitignore  LICENSE  README.md  analytics_automation_llm_with_reporting_interactive.ipynb  analytics_automation_llm_with_reporting_interactive_v2_case_study.ipynb  pyproject.toml
report_output_v2/: benchmark.json  executive_summary.md  report.html  technical_appendix.md
src/automated_llm_pred/: __init__.py  analysis.py  cli.py  config.py  constants.py  data.py  evaluation.py  guardrails.py  insights.py  pipeline.py  plotting.py  profiling.py  prompts.py  reporting.py  routing.py  utils.py
tests/: test_analysis.py  test_data.py  test_insights.py  test_pipeline_integration.py
